Signed-off-by: priyakaushal <priya.kaushal@lexisnexis.com>

--- a/MonolithicGenerator/MonolithicGenerator/properties/configuration.properties
+++ b/MonolithicGenerator/MonolithicGenerator/properties/configuration.properties
@@ -2,10 +2,10 @@
 
 ################################ All Location Configurations Needed #################################
 
-module_location = C:\\Projects_2016\\Chanakya\\modules
-driver_location = C:\\Projects_2016\\Chanakya\\driver
-monolithic_location = C:\\Projects_2016\\Chanakya\\Monolithic
-excelFile = C:\\Projects_2016\\Chanakya\\Trace_Matrix\\Trace_Matrix.xlsx
+module_location = C:\\XSpec_Chanakya1\\modules
+driver_location = C:\\XSpec_Chanakya1\\driver
+monolithic_location = C:\\XSpec_Chanakya1\\Monolithic
+excelFile = C:\\XSpec_Chanakya1\\Trace_Matrix\\Trace_Matrix.xlsx
 
 ################################ All Location Configurations Needed #################################
 
