--- a/MonolithicGenerator/MonolithicGenerator/properties/configuration.properties
+++ b/MonolithicGenerator/MonolithicGenerator/properties/configuration.properties
@@ -2,10 +2,10 @@
 
 ################################ All Location Configurations Needed #################################
 
-module_location = C:\\XSpec_Chanakya1\\modules
-driver_location = C:\\XSpec_Chanakya1\\driver
-monolithic_location = C:\\XSpec_Chanakya1\\Monolithic
-excelFile = C:\\XSpec_Chanakya1\\Trace_Matrix\\Trace_Matrix.xlsx
+module_location = C:\\Program Files (x86)\\Jenkins\\workspace\\AutoMonolithic_Generation\\modules
+driver_location = C:\\Program Files (x86)\\Jenkins\\workspace\\driver
+monolithic_location = C:\\Program Files (x86)\\Jenkins\\workspace\\Monolithic
+excelFile = C:\\Program Files (x86)\\Jenkins\\workspace\\Trace_Matrix\\Trace_Matrix.xlsx
 
 ################################ All Location Configurations Needed #################################
 
