Signed-off-by: priyakaushal <priya.kaushal@lexisnexis.com>

--- a/MonolithicGenerator/MonolithicGenerator/properties/configuration.properties
+++ b/MonolithicGenerator/MonolithicGenerator/properties/configuration.properties
@@ -3,9 +3,9 @@
 ################################ All Location Configurations Needed #################################
 
 module_location = C:\\Program Files (x86)\\Jenkins\\workspace\\AutoMonolithic_Generation\\modules
-driver_location = C:\\Program Files (x86)\\Jenkins\\workspace\\driver
-monolithic_location = C:\\Program Files (x86)\\Jenkins\\workspace\\Monolithic
-excelFile = C:\\Program Files (x86)\\Jenkins\\workspace\\Trace_Matrix\\Trace_Matrix.xlsx
+driver_location = C:\\Program Files (x86)\\Jenkins\\workspace\\AutoMonolithic_Generation\\driver
+monolithic_location = C:\\Program Files (x86)\\Jenkins\\workspace\\AutoMonolithic_Generation\\Monolithic
+excelFile = C:\\Program Files (x86)\\Jenkins\\workspace\\AutoMonolithic_Generation\\Trace_Matrix.xlsx
 
 ################################ All Location Configurations Needed #################################
 #########################Comment#########################
