Signed-off-by: priyakaushal <priya.kaushal@lexisnexis.com>

--- a/MonolithicGenerator/MonolithicGenerator/properties/configuration.properties
+++ b/MonolithicGenerator/MonolithicGenerator/properties/configuration.properties
@@ -5,7 +5,7 @@
 module_location = C:\\Program Files (x86)\\Jenkins\\workspace\\AutoMonolithic_Generation\\modules
 driver_location = C:\\Program Files (x86)\\Jenkins\\workspace\\AutoMonolithic_Generation\\driver
 monolithic_location = C:\\Program Files (x86)\\Jenkins\\workspace\\AutoMonolithic_Generation\\Monolithic
-excelFile = C:\\Program Files (x86)\\Jenkins\\workspace\\AutoMonolithic_Generation\\Trace_Matrix.xlsx
+excelFile = C:\\Program Files (x86)\\Jenkins\\workspace\\AutoMonolithic_Generation\\Trace_Matrix\\Trace_Matrix.xlsx
 
 ################################ All Location Configurations Needed #################################
 #########################Comment#########################
