--- a/MonolithicGenerator/properties/configuration.properties
+++ b/MonolithicGenerator/properties/configuration.properties
@@ -4,7 +4,7 @@
 
 module_location = C:\\XSpec_Chanakya1\\modules
 driver_location = C:\\XSpec_Chanakya1\\driver
-monolithic_location = C:\\Program Files (x86)\\Jenkins\\workspace\\AutoMonolithic_Generation\\Monolithic
+monolithic_location = C:\\XSpec_Chanakya1\\Monolithic
 excelFile = C:\\XSpec_Chanakya1\\Trace_Matrix\\Trace_Matrix.xlsx
 
 ################################ All Location Configurations Needed #################################
