--- a/MonolithicGenerator/properties/configuration.properties
+++ b/MonolithicGenerator/properties/configuration.properties
@@ -4,12 +4,14 @@
 
 module_location = C:\\XSpec_Chanakya1\\modules
 driver_location = C:\\XSpec_Chanakya1\\driver
-monolithic_location = C:\\Program Files (x86)\\Jenkins\\workspace\\AutoMonolithic_Generation\\Monolithic
+monolithic_location = C:\\XSpec_Chanakya1\\Monolithic
 excelFile = C:\\XSpec_Chanakya1\\Trace_Matrix\\Trace_Matrix.xlsx
+XSpecFile = C:\\XSpec_Chanakya1\\MY01_combine.xspec
 
 ################################ All Location Configurations Needed #################################
-#########################Comment#########################
+
 EXCEL_SHEETNO = 0
 EXCEL_START_ROW = 1
 Module_Name_COL = 0
 Driver_Name_COL = 1
+XSPEC_COL = 2
