Signed-off-by: priyakaushal <priya.kaushal@lexisnexis.com>

--- a/MonolithicGenerator/properties/configuration.properties
+++ b/MonolithicGenerator/properties/configuration.properties
@@ -2,11 +2,11 @@
 
 ################################ All Location Configurations Needed #################################
 
-module_location = C:\\Users\\sharmac2\\Desktop\\For_POC_CICD\\modules
-driver_location = C:\\Users\\sharmac2\\Desktop\\For_POC_CICD\\drivers
-monolithic_location = C:\\Users\\sharmac2\\Desktop\\For_POC_CICD\\Monolithic
-excelFile = C:\\Users\\sharmac2\\Desktop\\For_POC_CICD\\Trace_Matrix\\Trace_Matrix.xlsx
-XSpecFile = C:\\Users\\sharmac2\\Desktop\\For_POC_CICD\\Test_combine.xspec
+module_location = C:\\XSpec_Chanakya1\\modules
+driver_location = C:\\XSpec_Chanakya1\\driver
+monolithic_location = C:\\XSpec_Chanakya1\\Monolithic
+excelFile = C:\\XSpec_Chanakya1\\Trace_Matrix\\Trace_Matrix.xlsx
+XSpecFile = C:\\XSpec_Chanakya1\\Test_combine.xspec
 
 ################################ All Location Configurations Needed #################################
 
