Signed-off-by: sharmac2 <chaitanya.sharma@lexisnexis.com>

--- a/MonolithicGenerator/properties/configuration.properties
+++ b/MonolithicGenerator/properties/configuration.properties
@@ -4,9 +4,9 @@
 
 module_location = C:\\XSpec_Chanakya1\\modules
 driver_location = C:\\XSpec_Chanakya1\\driver
-monolithic_location = C:\\XSpec_Chanakya1\\Monolithic
+monolithic_location = C:\\XSpec_Chanakya1
 excelFile = C:\\XSpec_Chanakya1\\Trace_Matrix\\Trace_Matrix.xlsx
-XSpecFile = C:\XSpec_Chanakya1\\Xspec_run.bat
+XSpecFile = C:\\XSpec_Chanakya1\\Xspec_run.bat
 
 ################################ All Location Configurations Needed #################################
 
